[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "demoland_engine"
version = "1.0.0"
authors = ["Martin Fleischmann <martin@martinfleischmann.net>"]
description = "A predictive engine for the Alan Turing Institute project DemoLand"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "~=3.8"
joblib = "==1.3.2"
pandas = "==1.5.3"
xarray = "==2023.1.0"
fastparquet = "==2023.7.0"
scikit-learn = "==1.3.2"
pooch = "^1.8.2"
pytest = "^8.3.2"
